[package]
name = "agent-memory"
version = "0.2.0"
edition = "2021"
default-run = "agent-memory"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"